--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
     "framer-motion": "^12.11.0",
-    "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
